# testcmake

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: classroom.yaml
test/: CMakeLists.txt  test.cpp
